test/interaction/Issue8168.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : Ty ?1 : Ty Sort _47 [ at Issue8168.agda:29.10-11 ] _48 : _47 [ at Issue8168.agda:29.10-11 ] _a_56 : Ty [ at Issue8168.agda:30.17-20 ] _a_79 : _48 [ at Issue8168.agda:31.20-21 ] _a_82 : _48 [ at Issue8168.agda:31.26-27 ] Sort _85 [ at Issue8168.agda:40.10-11 ] _86 : _85 [ at Issue8168.agda:40.10-11 ] _a_94 : Ty [ at Issue8168.agda:41.17-20 ] _a_117 : _86 [ at Issue8168.agda:42.20-21 ] _a_120 : _86 [ at Issue8168.agda:42.26-27 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: _a_94 ⇒ _a_94 = _a_94 : Ty (blocked on _a_94) _a_94 = _a_94 ⇒ _a_94 : Ty (blocked on _a_94) _a_56 ⇒ _a_56 = _a_56 : Ty (blocked on _a_56) _a_56 = _a_56 ⇒ _a_56 : Ty (blocked on _a_56)" nil)
((last . 1) . (agda2-goals-action '(0 1)))
(agda2-status-action "")
(agda2-info-action "*Auto*" "?0 := ((_a_56 ⇒ _a_56) ⇒ (_a_56 ⇒ _a_56)) (fails to parse) error: [ParseError] in the name _a_56, the part 56 is not valid because it is a literal " nil)
((last . 1) . (agda2-goals-action '(0 1)))
(agda2-status-action "")
(agda2-info-action "*Auto*" "?0 := ((_a_56 ⇒ _a_56) ⇒ (_a_56 ⇒ _a_56)) (fails to parse) error: [ParseError] in the name _a_56, the part 56 is not valid because it is a literal ?1 := ((_a_94 ⇒ _a_94) ⇒ (_a_94 ⇒ _a_94)) (fails to parse) error: [ParseError] in the name _a_94, the part 94 is not valid because it is a literal " nil)
((last . 1) . (agda2-goals-action '(0 1)))
